paging for MeteorologicalDataController implemented + restTemplate bean configured
