# src/main/java/com/cleverlance/academy/tofu/iotServer/service/MeteorologicalDataServiceImpl.java
@@ -2,10 +2,13 @@ package com.cleverlance.academy.tofu.iotServer.service;
 
 import com.cleverlance.academy.tofu.iotServer.model.MeteorologicalData;
 import com.cleverlance.academy.tofu.iotServer.repository.JpaMeteorologicalDataRepository;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
 import java.time.OffsetDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class MeteorologicalDataServiceImpl implements MeteorologicalDataService{
@@ -23,7 +26,8 @@ public class MeteorologicalDataServiceImpl implements MeteorologicalDataService{
     }
 
     @Override
-    public List<MeteorologicalData> getMeteorologicalData() {
-        return this.meteorologicalDataRepository.findAll();
+    public List<MeteorologicalData> getMeteorologicalData(Integer pageSize, Integer pageNumber) {
+        Page<MeteorologicalData> result = this.meteorologicalDataRepository.findAll(PageRequest.of(pageNumber,pageSize));
+        return result.get().collect(Collectors.toList());
     }
 }
